--- a/todo.txt
+++ b/todo.txt
@@ -23,11 +23,13 @@ Design/CSS
 ---------------
 TODO - DTM -
 ---------------
-Go over logan.json with Joe
-Figure out what components I need
-Write skeleton components
-Populate components with hard-coded JSON
-Write react components for forms (node templates/instances)
+[ x ] Go over logan.json with Joe
+[ x ] Figure out what components I need
+[ x ] Write skeleton components
+[ x ] Populate components with hard-coded JSON
+[ ] Write react components for forms (node templates/instances)
+[ ] Hook up to backend with Joe
+[ ] Write react components for search and displaying search results
 
 
 ---------------
