Initial ApixNodeBuilder state working with redux

--- a/todo.txt
+++ b/todo.txt
@@ -28,6 +28,7 @@ TODO - DTM -
 [ x ] Write skeleton components
 [ x ] Populate components with hard-coded JSON
 [ ] Write react components for forms (node templates/instances)
+[ ] Create UX for adding label to new template and initialize template
 [ ] Hook up to backend with Joe
 [ ] Write react components for search and displaying search results
 
