--- a/todo.txt
+++ b/todo.txt
@@ -39,6 +39,9 @@ Sign up/Login
 [ x ] Sign up
 [ ] Actually log in to homepage
 [ ] Cache token
+[ ] Implement log out
+[ ] Serverside validation errors
+[ ] brew upgrade yarn
 Design
 
 CRUD + Search Templates
