Added react-burger-menu and implement sidebar menu in Repo.js

--- a/todo.txt
+++ b/todo.txt
@@ -59,6 +59,7 @@ Users
 Repos
 [ ] Repo view
 [ ] Refactor repo view into Home
+[ ] Create/edit overlay
 [ ] View repos
 [ ] Create repos
 [ ] Update repos
