--- a/todo.txt
+++ b/todo.txt
@@ -52,20 +52,24 @@ Repos
 [ ] Repo view
   [ ] Templates Panel (pop open)
     [ ] Editing Templates (inline) + React testing (REACT STATE ONLY)
-      [x] Creating Properties (inline)
-      [x] Reading Properties (inline)
-      [x] Editing Properties (inline)
+      [x] Creating Template Properties (inline)
+      [x] Reading Template Properties (inline)
+      [x] Editing Template Properties (inline)
       [x] Don't allow changing value_type after creation
-      [ ] Deleting Properties (inline, modal confirmation) + CSS
-        [ ] Deleting Properties modal
-      [ ] Creating Relationships (inline)
-      [ ] Reading Relationships (inline)
-      [ ] Editing Relationships (inline)
-      [ ] Deleting Relationships (inline, modal confirmation)
+      [x] Deleting Template Properties (inline, modal confirmation) + CSS
+        [x] Deleting Properties modal
+      [ ] Creating Relationship Properties (inline)
+      [ ] Reading Relationship Properties (inline)
+      [ ] Editing Relationship Properties (inline)
+      [ ] Deleting Relationship Properties (inline, modal confirmation)
     [ ] Creating Templates (inline)
     [ ] Reading Templates
     [ ] (Deleting Templates)
     [x] Changing templates
+    [ ] Creating Relationships (inline)
+    [ ] Reading Relationships (inline)
+    [ ] Editing Relationships (inline)
+    [ ] Deleting Relationships (inline, modal confirmation)
   [x] Nodes Panel
     [ ] Filtering/searching nodes by field
   [ ] Sidemenu
