--- a/todo.txt
+++ b/todo.txt
@@ -73,10 +73,11 @@ Repos
   [ ] Nodes Panel
     [x] Split panels
     [x] Extract NodesPanel.js
-    [ ] Creating Nodes
+    [x] Creating Nodes
       [ ] Handle case that no template is selected
-    [ ] Editing Nodes
+    [x] Editing Nodes
     [ ] Delete Nodes
+    [ ] Write tests
     [ ] Simple filter by property
   [ ] Relationships & Interfaces
     [ ] Repo.js switching between Templates, Relationships, and Interfaces
