--- a/todo.txt
+++ b/todo.txt
@@ -77,6 +77,10 @@ Repos
     [x] Editing Nodes
     [x] Delete Nodes
     [x] Simple filter by property
+    [ ] Check on nid ref
+    [ ] Deleting nodes creates new ones
+    [ ] Check on adding property
+    [ ] Check on refresh for nodes array
     [ ] Write tests
   [ ] Relationships & Interfaces
     [ ] Repo.js switching between Templates, Relationships, and Interfaces
