--- a/todo.txt
+++ b/todo.txt
@@ -69,7 +69,7 @@ Repos
     [x] Tests for Renaming Templates
     [x] Fix capitalization for template names during input
     [x] Changing templates
-  [ ] Nodes Panel
+  [x] Nodes Panel
     [x] Split panels
     [x] Extract NodesPanel.js
     [x] Creating Nodes
@@ -77,8 +77,7 @@ Repos
     [x] Editing Nodes
     [x] Delete Nodes
     [x] Simple filter by property
-    [ ] Write tests
-    [ ] More template tests?
+    [x] Write tests
   [ ] Relationships & Interfaces
     [ ] Repo.js switching between Templates, Relationships, and Interfaces
     [ ] Components for Relationships & Interfaces
@@ -94,6 +93,7 @@ Repos
     [ ] Editing Interfaces (inline)
     [ ] Deleting Interfaces (inline, modal confirmation)
     [ ] Implementing interfaces for templates (relationships?)
+    [ ] More template tests?
   [x] Add checkbox to show fields on template
   [ ] Add modal(?) to view whole node (add max-height and overflow to nodes panel)
   [ ] Write tests for templates
