Refactored /NodeTemplate to /TemplatesPanel

--- a/todo.txt
+++ b/todo.txt
@@ -80,6 +80,7 @@ Repos
     [x] Write tests
   [ ] Relationships & Interfaces
     [ ] Repo.js switching between Templates, Relationships, and Interfaces
+    [ ] Refactor TemplatesPanel.js
     [ ] Components for Relationships & Interfaces
     [ ] Tooltip for editing relationships from template
     [ ] Creating Relationships (inline)
