Fixed a couple small issues with related templates and template type navigation

--- a/todo.txt
+++ b/todo.txt
@@ -83,7 +83,7 @@ Repos
     [x] Repo.js switching between Templates, Relationships, and Interfaces
     [ ] From / To Node interface for Relationship Templates
           (https://github.com/reactjs/react-autocomplete)
-      [ ] Set node ids on actual template after selection
+      [x] Set node ids on actual template after selection
       [ ] Automatically close template when you navigate template type
     [ ] (Start writing tests)
     [ ] Creating Relationships (inline)
