Updated code for RelationshipTemplate creation

--- a/todo.txt
+++ b/todo.txt
@@ -81,10 +81,10 @@ Repos
   [ ] Relationships & Interfaces
     [x] Refactor TemplatesPanel.js
     [x] Repo.js switching between Templates, Relationships, and Interfaces
-    [ ] From / To Node interface for Relationship Templates
+    [x] From / To Node interface for Relationship Templates
           (https://github.com/reactjs/react-autocomplete)
       [x] Set node ids on actual template after selection
-      [ ] Automatically close template when you navigate template type
+      [x] Automatically close template when you navigate template type
     [ ] (Start writing tests)
     [ ] Creating Relationships (inline)
     [ ] Reading Relationships (inline)
