--- a/todo.txt
+++ b/todo.txt
@@ -78,6 +78,8 @@ Repos
     [x] Delete Nodes
     [x] Simple filter by property
     [x] Write tests
+    [ ] Add tests from creating new node for a new template
+    [ ] Make update template button update Repo state
   [ ] Relationships & Interfaces
     [x] Refactor TemplatesPanel.js
     [x] Repo.js switching between Templates, Relationships, and Interfaces
@@ -85,11 +87,11 @@ Repos
           (https://github.com/reactjs/react-autocomplete)
       [x] Set node ids on actual template after selection
       [x] Automatically close template when you navigate template type
-      [ ] Have From / To node fields change with 'editing' state
+      [x] Have From / To node fields change with 'editing' state
     [ ] (Start writing tests)
     [x] Creating Relationships (inline)
-    [ ] Reading Relationships (inline)
-    [ ] Editing Relationships (inline)
+    [x] Reading Relationships (inline)
+    [x] Editing Relationships (inline)
     [ ] Deleting Relationships (inline, modal confirmation)
     [ ] Settings for relationships/interfaces
     [ ] Tooltip for editing relationships from template
